--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "apollo-datasource-rest": "latest",
     "apollo-server": "2.10.1",
+    "apollo-server-cache-memcached": "^3.1.0",
+    "apollo-server-core": "^3.3.0",
     "graphql": "14.6.0",
     "lodash": "4.17.15",
     "node-fetch": "2.6.0"
